[project]
name = "lorautils"
description = "A collection of utility nodes for lora operations in ComfyUI."
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lrzjason/Comfyui-LoraUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lrzjason"
DisplayName = "Comfyui-LoraUtils"
Icon = ""
